<resources>
    <string name="app_name">FreshFoodApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="fab_content_description">Floating button</string>
    <string name="menu_kitchen">Kitchen</string>
    <string name="menu_shopping">Shopping</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_planner">Planner</string>
    <string name="menu_profile">Profile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Expiry Date Tracker</string>
    <string name="nav_header_subtitle">c.foodexpirydate@gmail.com</string>
    <string name="kitchen_fragment_label">Kitchen</string>
    <string name="shopping_fragment_label">Shopping</string>
    <string name="recipes_fragment_label">Recipes</string>
    <string name="planner_fragment_label">Planner</string>
    <string name="profile_fragment_label">Profile</string>
    <string name="ingredient_fragment_label">Ingredient</string>
    <string name="restriction_fragment_label">Restriction</string>
    <string name="search_dish_fragment_label">Search dish</string>
    <string name="floating_button">Floating button</string>
    <string name="menu_settings">Settings</string>
    <string name="content_description">Product\'s image</string>
    <string name="title">Product name</string>
    <string name="secondary_text">5 days left</string>
    <string name="supporting_text">200g x 1</string>
    <string name="delete_button_string">Delete product button</string>
    <string name="default_web_client_id">371029353723-5rfasm3tnf32qirfm5j3p515lt7d1tuc.apps.googleusercontent.com</string>
    <string name="title_activity_login">Auth</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_login_title">Welcome to Fresh Food</string>
    <string name="add_product_page_title">New Product</string>
    <string name="add_to_fridge">Add to fridge</string>
    <string name="cancel_adding">Cancel</string>
    <string name="product_title_edit_text">Product title</string>
    <string name="product_info_title">What is information of product?</string>
    <string name="product_barcode_edit_text">Barcode</string>
    <string name="product_brand_edit_text">Brand</string>
    <string name="product_expiry_date_title">When is this product expiring?</string>
    <string name="product_category_title">How would you categorize this product?</string>
    <string name="product_date_picker">Expiry date</string>
    <string name="content_description_date_start_icon">Calendar icon</string>
    <string name="product_kitchen_title">In which storage space do you want to add?</string>
    <string name="set_expiry_date">Set expiry date</string>
    <string name="total_time_text">45min</string>
    <string name="num_ingredient">0 missing ingredient</string>
    <string name="extended_fab_scanner_label">Scan barcode</string>
    <string name="extended_fab_gallery_label">Scan from image</string>
    <string name="extended_fab_manual_label">Add manually</string>
    <string name="sharing_info_title">Who do you want to share?</string>
    <string name="sharing_kitchen_title">In which storage space do you want to share?</string>
    <string name="confirm_sharing_kitchen">Share kitchen</string>
    <string name="sharing_kitchen_page_title">Share kitchen</string>
    <string name="sharing_info_edit_text">Email</string>
    <string name="sharing_info_helper_text">Share kitchen by your fiends\' email</string>
    <string name="sender_name">Thanh Tien</string>
    <string name="invitation_message">This is a message from invitation</string>
    <string name="accept_invitation">Accept</string>
    <string name="decline_invitation">Decline</string>
    <string name="sharing_notification_title">New invitations to join kitchen</string>
    <string name="notiftication_fragment_label">News</string>
    <string name="sharing_fragment_label">Sharing</string>
    <string name="sharing_kitchen_label">Sharing kitchen</string>
    <string name="num_of_member">x3 members</string>
    <string name="menu_sharing">Sharing</string>
    <string name="empty_view_caption">Your kitchen is empty</string>
    <string name="log_out_label_btn">Log out</string>
    <string name="empty_description">Empty image</string>
    <string name="shared_kitchen_fragment_label">Shared kitchen</string>
    <string name="more_menu_sharing">More menu</string>
    <string name="product_info_group">Product Details</string>
    <string name="nutrition_info_group">Nutritions</string>
    <string name="edit_product_desc">Edit Product</string>
    <string name="update_product">Update Product</string>
    <string name="update_product_page_title">Update Product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weekly_planner">Weekly Planner</string>
    <string name="back_to_previous_week">Back to previous week</string>
    <string name="weekly_planner_fragment_label">Weekly</string>
    <string name="no_dishes_planned">No dishes planned</string>
    <string name="sort_button_string">Sort product button</string>
</resources>