<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kitchen"
            android:icon="@drawable/kitchen"
            android:title="@string/menu_kitchen" />
        <item
            android:id="@+id/nav_sharing"
            android:icon="@drawable/ic_groups_24"
            android:title="@string/menu_sharing" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/recipes"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_planner"
            android:icon="@drawable/planner"
            android:title="@string/menu_planner" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
    </group>
</menu>