<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_kitchen">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.application.freshfoodapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.application.freshfoodapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_kitchen"
        android:name="com.application.freshfoodapp.ui.kitchen.KitchenFragment"
        android:label="@string/kitchen_fragment_label"
        tools:layout="@layout/fragment_kitchen"/>

    <fragment
        android:id="@+id/nav_product_detail"
        android:name="com.application.freshfoodapp.ui.productdetail.ProductDetailFragment"
        android:label="@string/kitchen_fragment_label"
        tools:layout="@layout/fragment_product_detail"/>

    <fragment
        android:id="@+id/nav_shopping"
        android:name="com.application.freshfoodapp.ui.shopping.ShoppingFragment"
        android:label="@string/shopping_fragment_label"
        tools:layout="@layout/fragment_shopping"/>

    <fragment
        android:id="@+id/nav_sharing"
        android:name="com.application.freshfoodapp.ui.sharing.SharingFragment"
        android:label="@string/sharing_fragment_label"
        tools:layout="@layout/fragment_sharing"/>

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.application.freshfoodapp.ui.recipes.RecipesFragment"
        android:label="@string/recipes_fragment_label"
        tools:layout="@layout/fragment_recipes"/>

    <fragment
        android:id="@+id/nav_planner"
        android:name="com.application.freshfoodapp.ui.planner.PlannerFragment"
        android:label="@string/planner_fragment_label"
        tools:layout="@layout/fragment_planner"/>

    <fragment
        android:id="@+id/nav_weekly_planner"
        android:name="com.application.freshfoodapp.ui.planner.weeklyplanner.WeeklyPlannerFragment"
        android:label="@string/weekly_planner_fragment_label"
        tools:layout="@layout/fragment_weekly_planner" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.application.freshfoodapp.ui.profile.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.application.freshfoodapp.ui.notification.NotificationFragment"
        android:label="@string/notiftication_fragment_label"
        tools:layout="@layout/fragment_notification"/>

    <fragment
        android:id="@+id/nav_shared_kitchen"
        android:name="com.application.freshfoodapp.ui.sharing.SharedKitchen.SharedKitchenFragment"
        android:label="@string/shared_kitchen_fragment_label"
        tools:layout="@layout/fragment_shared_kitchen"/>

    <fragment
        android:id="@+id/nav_ingredient"
        android:name="com.application.freshfoodapp.ui.recipes.recipesdetail.IngredientFragment"
        android:label="@string/ingredient_fragment_label"
        tools:layout="@layout/fragment_ingredient" />

    <fragment
        android:id="@+id/nav_country"
        android:name="com.application.freshfoodapp.ui.recipes.recipescountry.CountryFragment"
        android:label="Traditional meal"
        tools:layout="@layout/fragment_country" />

    <fragment
        android:id="@+id/restrictionFragment"
        android:name="com.application.freshfoodapp.ui.profile.restriction.RestrictionFragment"
        android:label="@string/restriction_fragment_label"
        tools:layout="@layout/fragment_restriction" />

    <fragment
        android:id="@+id/searchDishFragment"
        android:name="com.application.freshfoodapp.ui.planner.searchdishes.SearchDishFragment"
        android:label="@string/search_dish_fragment_label"
        tools:layout="@layout/fragment_search_dish" />

    <!--<fragment
        android:id="@+id/addDishActivity"
        android:name="com.application.freshfoodapp.ui.planner.adddish.AddDishActivity"
        android:label="fragment_add_dish_activity"
        tools:layout="@layout/fragment_add_dish_activity" />-->
</navigation>