<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/kitchenThumbnailView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media"
            app:srcCompat="@drawable/food_bowl"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sharingKitchenTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sharing_kitchen_label"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/numOfMemberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_of_member"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ownerAvatarView"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:contentDescription="@string/content_description"
                    android:scaleType="centerCrop"
                    app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Avatar"
                    app:srcCompat="@drawable/food_bowl" />

                <TextView
                    android:id="@+id/ownerNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/sender_name"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/moreOptionsBtn"
            style="?attr/materialIconButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/more_menu_sharing"
            app:icon="@drawable/ic_more_horiz_24"
            app:iconGravity="textStart" />


    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp" />

</LinearLayout>